force-app/main/default/objects/OLDCAMP__c/OLDCAMP__c.object-meta.xml
<CustomObject>
    <label>OLD CAMPAIGN</label>
    <nameField>
        <label>OLD CAMPAIGN name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLD CAMPAIGN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>