force-app/main/default/objects/OLDCAMP__c/fields/Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost__c</fullName>
    <label>Budgeted Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>