force-app/main/default/objects/OLDCAMP__c/fields/Expected_Response__c.field-meta.xml
<CustomField>
    <fullName>Expected_Response__c</fullName>
    <label>Expected Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>