force-app/main/default/objects/OLDCAMP__c/fields/flag__c.field-meta.xml
<CustomField>
    <fullName>flag__c</fullName>
    <formula>IMAGE(
 IF(Active__c, &quot;/img/samples/flag_green.gif&quot;,  &quot;/img/samples/flag_red.gif&quot; ), &quot;Active Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live?</label>
    <type>Text</type>
</CustomField>