force-app/main/default/objects/OLDCAMP__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <label>Reach</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>