force-app/main/default/objects/OLDCAMP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Reach__c</columns>
    <columns>Budgeted_Cost__c</columns>
    <columns>flag__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Live Campaigns</label>
</ListView>